[tool.poetry]
name = "china-region"
version = "0.1.0"
description = ""
authors = ["zeekrs <git@zeekrs.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
